--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "^2.4.2",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/jsonwebtoken": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -34,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"jsonwebtoken": "^9.0.0",
 		"svelte-icons": "^2.1.0"
 	}
 }
