implemented redis cache control

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ PUBLIC_MODE="production"
 AUTH_URL="http://localhost:3000"
 AUTH_API_KEY= # API key for the auth server
 AUTH_PROJECT_ID=""
+
+REDIS_URL=
