implemented search functionality

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,7 @@ AUTH_URL="http://localhost:3000"
 AUTH_API_KEY= # API key for the auth server
 AUTH_PROJECT_ID=""
 
+ELASTIC_URL=
+ELASTIC_USER=
+ELASTIC_PASS=
 REDIS_URL=
