--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@elastic/elasticsearch": "^8.7.0",
 		"ioredis": "^5.3.2",
 		"jsonwebtoken": "^9.0.0",
 		"svelte-icons": "^2.1.0"
